MDEV-7152 Wrong result set for WHERE a='oe' COLLATE utf8_german2_ci AND a='oe' - The code that tested if      WHERE expr=value AND expr=const   can be rewritten to:      WHERE const=value AND expr=const   was incomplete in case of STRING_RESULT. - Moving the test into a new function, to reduce duplicate code.